--- a/index.html
+++ b/index.html
@@ -6,23 +6,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Media Kit – Daniel Leeb</title>
   <style>
-    body {
+    html, body {
       margin: 0;
-      font-family: sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+      padding: 0;
+      height: 100%;
+      overflow: hidden;
     }
     iframe {
       width: 100%;
-      height: 100vh;
+      height: 100%;
       border: none;
     }
   </style>
 </head>
 <body>
-  <h1>Media Kit – Daniel Leeb</h1>
   <iframe src="Media_Kit_-_Daniel_Leeb.pdf"></iframe>
-  <p><a href="Media_Kit_-_Daniel_Leeb.pdf" download>📄 PDF herunterladen</a></p>
 </body>
 </html>
