--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Media Kit – Daniel Leeb (PDF.js)</title>
+  <title>Media Kit – Daniel Leeb</title>
   <style>
     html, body {
       margin: 0;
@@ -20,6 +20,6 @@
   </style>
 </head>
 <body>
-  <iframe src="https://mozilla.github.io/pdf.js/web/viewer.html?file=Media_Kit_-_Daniel_Leeb.pdf"></iframe>
+  <iframe src="Media_Kit_-_Daniel_Leeb.pdf"></iframe>
 </body>
 </html>
