--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
   </style>
 </head>
 <body>
-  <iframe src="pdf.js/web/viewer.html?file=Media_Kit_-_Daniel_Leeb.pdf"></iframe>
+  <iframe src="pdfjs/web/viewer.html?file=../Media_Kit_-_Daniel_Leeb.pdf"></iframe>
 </body>
 </html>
