--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
-
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Media Kit – Daniel Leeb (PDF.js)</title>
+  <meta charset="UTF-8">
+  <title>Media Kit – Daniel Leeb (Self-hosted PDF.js)</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     html, body {
       margin: 0;
-      padding: 0;
       height: 100%;
       overflow: hidden;
     }
@@ -20,6 +18,6 @@
   </style>
 </head>
 <body>
-  <iframe src="pdfjs/web/viewer.html?file=../Media_Kit_-_Daniel_Leeb.pdf"></iframe>
+  <iframe src="pdfjs/web/viewer.html?file=../Media_Kit_-_Daniel_Leeb.pdf#zoom=page-width"></iframe>
 </body>
 </html>
