--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
   </style>
 </head>
 <body>
-  <iframe src="pdfjs/web/viewer.html?file=../Media_Kit_-_Daniel_Leeb.pdf#zoom=page-width"></iframe>
+  <iframe src="pdfjs/web/viewer.html?file=../Media_Kit_-_Daniel_Leeb.pdf"></iframe>
 </body>
 </html>
