--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
   </style>
 </head>
 <body>
-  <iframe src="https://mozilla.github.io/pdf.js/web/viewer.html?file=Media_Kit_-_Daniel_Leeb.pdf"></iframe>
+  <iframe src="https://mozilla.github.io/pdf.js/web/viewer.html?file=mediakit.pdf"></iframe>
 </body>
 </html>
